fix recipe matching